# square_solver

./: .gitignore  CMakeLists.txt  README.md  bignumber.cpp  bignumber.h  bignumberbuilder.cpp  bignumberbuilder.h  bignumbertypes.h  buffer.h  buffer.hpp  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h  producerconsumer.cpp  producerconsumer.h  quadprinter.cpp  quadprinter.h  quadreader.cpp  quadreader.h  quadsolver.cpp  quadsolver.h  task.h
bignumber/: bignumber.cpp  bignumber.h  bignumberbuilder.cpp  bignumberbuilder.h  bignumbertypes.h  numvector.cpp  numvector.h
producerconsumer/: buffer.hpp
quadequation/: quadprinter.cpp  quadprinter.h  quadreader.cpp  quadreader.h  quadsolver.cpp  quadsolver.h  task.h
test/: CMakeLists.txt  bignumber.cpp  test.cpp
